feat(record): Sprint 18-R 기록탭 재건 (Context List + Rhythm Story)
- ScopeToggle 위젯 추가 (daily/weekly 전환)
- TimelineFilterChips 위젯 추가 (활동 필터링)
- ContextRibbon 위젯 추가 (요약 배너)
- ElapsedTimeIndicator 위젯 추가 (경과시간 표시)
- ActivityListItem 스와이프 편집/삭제
- together_guide_dialog i18n 적용
- Info.plist 수출규정 면제 설정 추가
- CLAUDE.md TestFlight 빌드 가이드 추가
- Version 2.3.0+22

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -300,7 +300,7 @@
   "statisticsAverage": "Average",
   "statisticsTogetherView": "Together View",
   "statisticsTogetherViewTitle": "This Week Together",
-  "statisticsTogetherViewGuide": "Each baby has their own unique pattern 💜",
+  "statisticsTogetherViewGuide": "Each baby has their own unique pattern",
   "statisticsCorrectedAge": "Corrected {days}d",
   "@statisticsCorrectedAge": {
     "description": "Corrected age display",
@@ -515,5 +515,43 @@
   "copyCode": "Copy Code",
   "inviteEmailSent": "Invite email sent!",
   "invalidEmail": "Please enter a valid email",
-  "codeCopied": "Invite code copied!"
+  "codeCopied": "Invite code copied!",
+  "emptyBabiesTitle": "No baby info",
+  "emptyBabiesHint": "Please complete onboarding",
+  "scopeDaily": "Daily",
+  "scopeWeekly": "Weekly",
+  "weeklyPatternHint": "See Statistics tab for weekly pattern",
+  "filterAll": "All",
+  "activityFeeding": "Feeding",
+  "activitySleep": "Sleep",
+  "activityDiaper": "Diaper",
+  "activityPlay": "Play",
+  "actionEdit": "Edit",
+  "swipeHint": "Swipe to edit/delete",
+  "elapsedJustNow": "Just now",
+  "elapsedMinutesAgo": "{minutes}m ago",
+  "@elapsedMinutesAgo": {
+    "placeholders": {
+      "minutes": {"type": "int", "example": "5"}
+    }
+  },
+  "elapsedHoursAgo": "{hours}h ago",
+  "@elapsedHoursAgo": {
+    "placeholders": {
+      "hours": {"type": "int", "example": "2"}
+    }
+  },
+  "elapsedHoursMinutesAgo": "{hours}h {minutes}m ago",
+  "@elapsedHoursMinutesAgo": {
+    "placeholders": {
+      "hours": {"type": "int", "example": "1"},
+      "minutes": {"type": "int", "example": "30"}
+    }
+  },
+  "elapsedDaysAgo": "{days}d ago",
+  "@elapsedDaysAgo": {
+    "placeholders": {
+      "days": {"type": "int", "example": "3"}
+    }
+  }
 }
