fix(timeline): HF2 v2 - 6가지 잔존 버그 근본 수정
HF2-1,2,4: MiniTimeBar 근본 재작성
- 5종 활동(수면/수유/기저귀/놀이/건강) 모두 컬러바로 표시
- 수유 아이콘 마커 영역 완전 제거
- 자체 범례 제거 (FilterChips가 역할 대체)
- 우선순위 기반 색상: 수면 > 수유 > 기저귀 > 놀이 > 건강

HF2-3: DailySummaryBanner 완전 제거
- daily_view.dart에서 import 및 위젯 사용 제거
- ContextRibbon만 남김 (중복 해소)

HF2-5: StatSummaryCard 라벨/단위 수정
- 타이틀에 '일평균' 접두어 추가 (i18n: statsDailyAvg)
- 변화량에 단위 포함 (+0.3h, -1)
- 수면 분→시간 변환 로직 추가
- 변화 없음: 화살표 아이콘 + 'vs prev' 표시

HF2-6: 오늘 데이터 안 보임 근본 수정
- ActivityRepository의 날짜 쿼리 UTC 변환
- getTodayActivities, getActivitiesByDateRange 모두 수정
- startDate.toUtc().toIso8601String() 패턴 적용
- 디버그 로그 추가

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -318,6 +318,7 @@
   "recordHistoryTitle": "Records",
   "tabTimeline": "Timeline",
   "tabStatistics": "Statistics",
+  "statsDailyAvg": "Daily Avg",
   "statsSleep": "Sleep",
   "statsFeeding": "Feeding",
   "statsDiaper": "Diaper",
