refactor(i18n): Phase 0 Sprint 19 대상 파일 규칙 준수
- ARB 키 16개 추가 (recordUpdated, retry, babyDefault, familyInfoMissing 등)
- LuluIcons 8개 추가 (arrowUp/Down, chevronLeft/Right, errorOutline, editCalendar, tip, barChart)
- 하드코딩 한국어 → l10n 호출로 교체
- Icons.xxx → LuluIcons.xxx로 교체
- DateFormat('M월 d일', 'ko_KR') → DateFormat.MMMEd(locale)로 국제화

대상 파일:
- pattern_data_provider.dart
- daily_view.dart
- weekly_view.dart
- stat_summary_card.dart
- date_navigator.dart
- daily_summary_banner.dart
- statistics_tab.dart

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -554,5 +554,25 @@
     "placeholders": {
       "days": {"type": "int", "example": "3"}
     }
-  }
+  },
+
+  "recordUpdated": "Record updated",
+  "retry": "Retry",
+  "babyDefault": "Baby",
+  "familyInfoMissing": "Family info not found",
+  "dataLoadTimeout": "Data loading is taking too long...",
+  "dataLoadFailed": "Unable to load data",
+  "statisticsLoading": "Loading statistics...",
+  "errorOccurred": "Something went wrong",
+  "recommendationInRange": "Normal",
+  "recommendationBelow": "Low",
+  "recommendationAbove": "High",
+  "today": "Today",
+  "countTimes": "{count}x",
+  "@countTimes": {
+    "placeholders": {
+      "count": {"type": "int", "example": "5"}
+    }
+  },
+  "vsPrev": "vs prev"
 }
