feat(chart): Sprint 19 - chart redesign + rule violation fixes
- Replace Column/Row/Expanded with single CustomPaint (_WeeklyGridPainter)
- Fix async/await chain for week navigation (goToPreviousWeek/goToNextWeek)
- Add DayTimeline model for real-time chart rendering
- Fix double.clamp min>max crash with defensive remaining check
- Replace withValues/withOpacity with solid LuluColors constants (11 cases)
- Unify chart bar colors with LuluActivityColors references
- Replace hardcoded Korean fallbacks with English (statistics_tab, weekly_view)
- Fix bath activity parser mapping (health → play) + 57 records migrated
- Remove weekday labels from chart (number-only display)
- Remove activity bar Radius (drawRRect → drawRect)
- Delete legacy widgets: MiniTimeBar, DailySummaryBanner, ContextRibbon,
  ElapsedTimeIndicator, WeeklyPatternChart
- Add DailyGrid, WeeklyGrid, WeeklyInsight, WeeklyChartFull widgets
- Update CLAUDE.md to v7.2 (merged v6.1 + v7.1)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -574,5 +574,84 @@
       "count": {"type": "int", "example": "5"}
     }
   },
-  "vsPrev": "vs prev"
+  "vsPrev": "vs prev",
+
+  "dailyGridSleep": "Sleep",
+  "dailyGridFeeding": "Feeding",
+  "dailyGridDiaper": "Diaper",
+  "dailyGridPlay": "Play",
+
+  "weeklyGridAvgSleep": "Avg Sleep",
+  "weeklyGridAvgFeeding": "Avg Feeding",
+  "weeklyGridAvgDiaper": "Avg Diaper",
+  "weeklyGridAvgPlay": "Avg Play",
+
+  "dailyGridFeedingCount": "{count}x",
+  "@dailyGridFeedingCount": {
+    "placeholders": {
+      "count": {"type": "int", "example": "8"}
+    }
+  },
+  "dailyGridCount": "{count}x",
+  "@dailyGridCount": {
+    "placeholders": {
+      "count": {"type": "int", "example": "6"}
+    }
+  },
+  "dailyGridElapsedHours": "{hours}h {minutes}m ago",
+  "@dailyGridElapsedHours": {
+    "placeholders": {
+      "hours": {"type": "int", "example": "2"},
+      "minutes": {"type": "int", "example": "30"}
+    }
+  },
+  "dailyGridElapsedMinutes": "{minutes}m ago",
+  "@dailyGridElapsedMinutes": {
+    "placeholders": {
+      "minutes": {"type": "int", "example": "45"}
+    }
+  },
+  "dailyGridNoRecord": "-",
+  "dailyGridCountUnit": "times",
+  "dailyGridUnitHours": "h",
+  "dailyGridUnitMinutes": "m",
+
+  "dailyViewNoRecordsToday": "No records yet today",
+  "dailyViewNoRecordsDate": "No records on {date}",
+  "@dailyViewNoRecordsDate": {
+    "placeholders": {
+      "date": {"type": "String", "example": "Jan 15 (Wed)"}
+    }
+  },
+
+  "weeklyChartTitle": "Weekly Pattern",
+  "weeklyChartEmptyTitle": "Not enough data\nto analyze patterns yet",
+  "weeklyChartEmptyHint": "Patterns will appear after 3+ days of records",
+
+  "weekdayMon": "Mon",
+  "weekdayTue": "Tue",
+  "weekdayWed": "Wed",
+  "weekdayThu": "Thu",
+  "weekdayFri": "Fri",
+  "weekdaySat": "Sat",
+  "weekdaySun": "Sun",
+
+  "chartFilterAll": "All",
+  "chartFilterSleep": "Sleep",
+  "chartFilterFeeding": "Feeding",
+  "chartFilterDiaper": "Diaper",
+  "chartFilterPlay": "Play",
+  "chartFilterHealth": "Health",
+
+  "chartLegendNightSleep": "Night",
+  "chartLegendDaySleep": "Nap",
+  "chartLegendFeeding": "Feeding",
+  "chartLegendDiaper": "Diaper",
+  "chartLegendPlay": "Play",
+  "chartLegendHealth": "Health",
+
+  "insightTitleGood": "Good news!",
+  "insightTitleCaution": "Heads up",
+  "insightTitleDefault": "This week's insight",
+  "insightTitleTogether": "Together view insight"
 }
