feat(record): Sprint 19 - DateNavigator 주간모드 + WeekCalendarPicker 신규
- DateNavigator: DateNavigatorScope enum 추가 (daily/weekly)
  - weekly 모드: "M/d ~ M/d" 포맷, ±7일 네비게이션, canGoNext 제어
  - daily 모드: 기존 동작 유지 (timeline_tab.dart 호환)
- _WeekCalendarPickerSheet: 월간 달력 기반 주 단위 선택 BottomSheet
  - 주 행 탭으로 해당 주 월요일 반환
  - LuluColors.weekPickerSelected 하이라이트
  - 미래 주 비활성화, "이번 주" 바로가기 버튼
- WeeklyView: DateNavigator(scope=weekly) 최상단 배치
  - _onWeekChanged()로 주간 데이터 로드 연결
  - _showWeekPicker()로 캘린더 피커 호출
- WeeklyChartFull: 내부 화살표(_WeekNavigatorV4) 완전 제거
  - onPreviousWeek/onNextWeek/canGoNext 필드 제거
  - DateNavigator가 주간 네비게이션 전담
- i18n: weekPickerTitle, weekPickerThisWeek 키 추가 (ko/en)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -653,5 +653,8 @@
   "insightTitleGood": "Good news!",
   "insightTitleCaution": "Heads up",
   "insightTitleDefault": "This week's insight",
-  "insightTitleTogether": "Together view insight"
+  "insightTitleTogether": "Together view insight",
+
+  "weekPickerTitle": "Select Week",
+  "weekPickerThisWeek": "This Week"
 }
